--- a/css/styles.css
+++ b/css/styles.css
@@ -44,9 +44,9 @@ a {
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 .page {
   background-color: var(--wite-text-color);
@@ -136,7 +136,7 @@ img {
 
 .address-icon {
   margin-right: 10px;
-  stroke: currentColor;
+  fill: currentColor;
 }
 
 .addres-link {
@@ -174,26 +174,18 @@ img {
   width: 1px !important;
   overflow: hidden;
 }
-.speshialyties {
-  display: inline-flex;
-  list-style: none;
-}
 
 .speshialyties-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--tem-button-bacground);
   border-radius: 4px;
 }
-.speshialyties-item:not(:last-child) {
-  margin-right: 30px;
-}
 
-.speshialyties-icon {
-  margin-left: 100px;
-  margin-top: 25px;
-}
 .section-herro {
   margin-left: auto;
   margin-right: auto;
@@ -416,12 +408,18 @@ img {
   border-top: 0px;
   padding: 20px 24px;
 }
-.card:hover {
+/*.card:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+}*/
 
 .works {
+  display: block;
   color: var(--primary-text-color);
+}
+
+.works:hover,
+.works:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .names {
