--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --socials-icon: #afb1b8;
   --main-font: "Roboto", sans-serif;
   --title-font: "Raleway", sans-serif;
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 html {
@@ -73,6 +74,7 @@ img {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  transition: color var(--animation);
 }
 .accent,
 .logo:focus,
@@ -102,10 +104,21 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  transition: color 250ms (0.4, 0, 0.2, 1);
+  transition: color var(--animation);
 }
 .site-nav .link.current {
   color: var(--accent-color);
+}
+
+.current::after {
+  position: relative;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+  border-radius: 2px;
+  bottom: -32px;
 }
 
 .auth-nav {
@@ -123,6 +136,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: color var(--animation);
 }
 
 .site-nav .link:hover,
@@ -241,6 +255,26 @@ img {
 .we-doo {
   padding-bottom: 94px;
 }
+
+.we-doo-text {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  bottom: 0;
+  background: rgba(47, 48, 58, 0.8);
+  text-transform: uppercase;
+}
+
+.text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 27px;
+}
 .section-title,
 .section-title a {
   color: var(--title-text-color);
@@ -253,6 +287,7 @@ img {
 }
 .card-image {
   display: block;
+  position: relative;
 }
 
 .menu {
@@ -260,6 +295,7 @@ img {
 }
 
 .menu-items {
+  position: relative;
   margin-right: 30px;
 }
 
@@ -325,6 +361,7 @@ img {
 
 .social-icons-svg {
   fill: var(--socials-icon);
+  transition: fill var(--animation);
 }
 .main-content {
   padding-bottom: 94px;
@@ -337,6 +374,7 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: fill var(--animation), background-color var(--animation);
 }
 
 .social-icons-item:not(:last-child) {
@@ -365,6 +403,8 @@ img {
   font-size: 16px;
   line-height: 1.62;
   padding: 6px 22px;
+  transition: color var(--animation), background-color var(--animation),
+    box-shadow var(--animation);
 }
 
 .buttons:hover,
@@ -409,13 +449,47 @@ img {
   border-top: 0px;
   padding: 20px 24px;
 }
-/*.card:hover {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}*/
+
+.thumb {
+  position: relative;
+}
+
+.overlay-text {
+  text-align: left;
+  padding: 63px 24px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform var(--animation);
+}
+.works:hover .overlay,
+.works:focus .overlay {
+  transform: translateY(0);
+}
 
 .works {
   display: block;
   color: var(--primary-text-color);
+  transition: box-shadow var(--animation);
 }
 
 .works:hover,
@@ -428,7 +502,7 @@ img {
 }
 
 .clients {
-  padding-top: 188px;
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -439,6 +513,7 @@ img {
 
 .clients-list-image {
   fill: var(--socials-icon);
+  transition: fill var(--animation);
 }
 
 .clsients-list-link {
@@ -450,6 +525,7 @@ img {
   border: 1px solid;
   border-radius: 4px;
   border-color: var(--socials-icon);
+  transition: fill var(--animation), border-color var(--animation);
 }
 
 .clients-list-items:not(:last-child) {
@@ -493,10 +569,12 @@ img {
 
 .map-link {
   color: var(--wite-text-color);
+  transition: color var(--animation);
 }
 
 .list-auth {
   color: var(--address-text-color);
+  transition: color var(--animation);
 }
 
 .list .map-link:hover,
@@ -531,6 +609,7 @@ img {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color var(--animation);
 }
 
 .footer-social-item:not(:last-child) {
@@ -559,6 +638,7 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   overflow: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -571,7 +651,6 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 100%;
   max-width: 528px;
   min-height: 581px;
@@ -580,6 +659,12 @@ img {
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%) scale(1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
 }
 
 /*.modal-title {
@@ -601,6 +686,3 @@ img {
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-
-/*.modal-btn-icon {
-}*/
